ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default
  namespace: default
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  #tls:
  #  - hosts:
  #    - HOST_DOMAIN
  rules:
    - host: HOST_DOMAIN
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /hub
            pathType: Prefix
            backend:
              service:
                name: proxy-public
                port:
                  number: 80
